[package]
name = "liveblog-data-xtractor-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = {version = "0.4.31", features = ["serde"] }
clap = {version = "4.4.6", features = ["derive"] }
dyn-fmt = "0.4.0"
itertools = "0.11.0"
reqwest = "0.11.20"
serde = {version = "1.0.144", features = ["derive"] }
serde_json = "1.0"
url-escape = "0.1.1"
